# dynamic-tensor-array

./: setup.cfg
