[metadata]
name = dynamic-tensor-array
version = 0.0.1
description = Create a numpy dynamic array.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh and Manu Eder
url = https://github.com/dylanwal/numpy_dynamic_array
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    dynamic_tensor_array
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
include_package_data = true
install_requires =
    numpy>=1.22.0

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[flake8]
max-line-length = 160